--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -9,6 +9,7 @@ on:
   workflow_dispatch:
 
 env:
+  PROCESS: Planning
   WORKING_DIRECTORY: ./
 
 permissions: read-all
@@ -35,3 +36,19 @@ jobs:
         with:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Create Terraform backend state storage
+        uses: Azure/cli@v1.0.6
+        with:
+          # Azure CLI version to be used to execute the script. If not provided, latest version is used
+          # azcliversion: 2.34.1 # optional, default is agentazcliversion
+          inlineScript: |
+            az version
+
+            if [ $(az group exists --name ${{ RESOURCE_GRPOUP }} = false ]; then 
+              az group create --name ${{ RESOURCE_GRPOUP }} --location ${{ LOCATION }}
+            else
+              echo $resourceGroup
+            fi
+
+
