--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -9,8 +9,6 @@ on:
   workflow_dispatch:
 
 env:
-  LOCATION: ${{ vars.LOCATION }}
-  RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
   PROCESS: Planning
   WORKING_DIRECTORY: ./
 
@@ -40,17 +38,17 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       - name: Create Terraform backend state storage
-        uses: Azure/cli@v1.0.6
+        uses: Azure/cli@v2.65.0
         with:
           # Azure CLI version to be used to execute the script. If not provided, latest version is used
           # azcliversion: 2.34.1 # optional, default is agentazcliversion
           inlineScript: |
             az version
 
-            if [ $(az group exists --name $RESOURCE_GROUP = false ]; then 
-              az group create --name $RESOURCE_GROUP --location ${{ vars.LOCATION }}
-            else
-              echo $resourceGroup
+            if [ $(az group exists --name ${{ vars.RESOURCE_GROUP }} = false ]; then \
+              az group create --name ${{ vars.RESOURCE_GROUP }} --location ${{ vars.LOCATION }} \
+            else \
+              echo ${{ vars.RESOURCE_GROUP }} \
             fi
 
 
