--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -9,6 +9,7 @@ on:
   workflow_dispatch:
 
 env:
+  RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP }}
   PROCESS: Planning
   WORKING_DIRECTORY: ./
 
@@ -38,17 +39,13 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       - name: Create Terraform backend state storage
-        uses: Azure/cli@v1.0.6
-        with:
-          # Azure CLI version to be used to execute the script. If not provided, latest version is used
-          # azcliversion: 2.34.1 # optional, default is agentazcliversion
-          inlineScript: |
-            az version
-
-            if [ $(az group exists --name ${{ vars.RESOURCE_GROUP }} = false ]; then \
-              az group create --name ${{ vars.RESOURCE_GROUP }} --location ${{ vars.LOCATION }} \
-            else \
-              echo ${{ vars.RESOURCE_GROUP }} \
-            fi
-
+        run: |
+          echo ""
+          echo "🎯 Getting resource group named: " $RESOURCE_GROUP_NAME
+          RG_EXISTS=$(az group exists --name $RESOURCE_GROUP_NAME )
+          if [ $RG_EXISTS == "false" ]; then
+            echo "Resource group not found, creating... "
+            az group create --name $RESOURCE_GROUP_NAME --location westeurope 
+          fi
+          RESOURCE_GROUP_ID=$(az group show -n $RESOURCE_GROUP_NAME  -o tsv --query id)
 
