--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  PROCESS: Planning
+  PROCESS: planning
   WORKING_DIRECTORY: ./
 
 permissions: read-all
@@ -25,7 +25,7 @@ jobs:
       run:
         shell: bash
         working-directory: ${{ env.WORKING_DIRECTORY }}
-    
+       
     steps:
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
@@ -36,9 +36,11 @@ jobs:
         with:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
+   
       - name: Create Terraform backend state storage
         run: |
+          echo "🎯 Setting default subscription for: " ${{ vars.SUBSCRIPTION_ID }}
+          az account set --subscription ${{ vars.SUBSCRIPTION_ID }}
 
           echo "🎯 Getting resource group named: " ${{ vars.RESOURCE_GROUP_NAME }}
           RG_EXISTS=$(az group exists --name ${{ vars.RESOURCE_GROUP_NAME }} )
@@ -69,7 +71,11 @@ jobs:
           echo "🎯 Getting storage account key..."
           STORAGE_ACCOUNT_KEY=$(az storage account keys list --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --account-name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "[0].value" -o tsv)
 
-          echo ""
           echo "🎯 Getting storage connection string..."
           STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
           echo $STORAGE_ACCOUNT_CONNECTION_STRING
+
+          echo "🎯 Setting default subscription for: " ${{ vars.SUBSCRIPTION_ACR_ID }}
+          az account set --subscription ${{ vars.SUBSCRIPTION_ACR_ID }}
+
+
