--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -84,3 +84,13 @@ jobs:
 
           echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
           az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
+
+          echo "🎯 Running Terraform Init!"
+          terraform init \
+            -upgrade \
+            -backend-config="resource_group_name=${RESOURCE_GROUP_NAME}" \
+            -backend-config="storage_account_name=${STORAGE_ACCOUNT_NAME}" \
+            -backend-config="container_name=${CONTAINER_NAME}" \
+            -backend-config="key=${STORAGE_ACCOUNT_KEY}" \
+            -input=true \
+            -reconfigure
