--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   PROCESS: planning
-  TERRAFORM_DIRECTORY: blob/dev/.github/terraform/
+  TERRAFORM_DIRECTORY: ../terraform
 
 permissions: read-all
 
