--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -16,35 +16,10 @@ permissions: read-all
 
 jobs:
 
-  # scan-terraform-config:
-  #   runs-on: ubuntu-latest
-  #   name: Scan Terraform with Checov
-  #   steps:
-  #     - name: Checkout repo
-  #       uses: actions/checkout@master
-
-  #     - name: Run Checkov Scan
-  #       id: checkov
-  #       uses: bridgecrewio/checkov-action@master
-  #       with:
-  #         directory: ${{ env.TERRAFORM_DIRECTORY }}
-  #         soft_fail: true # optional: do not return an error code if there are failed checks
-  #         # check: CKV_AWS_1 # optional: run only a specific check_id. can be comma separated list
-  #         # skip_check: CKV_AWS_2 # optional: skip a specific check_id. can be comma separated list
-  #         # quiet: true # optional: display only failed checks
-  #         # framework: terraform # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
-  #         # output_format: sarif # optional: the output format, one of: cli, json, junitxml, github_failed_only, or sarif. Default: sarif
-  #         # download_external_modules: true # optional: download external terraform modules from public git repositories and terraform registry
-  #         # log_level: DEBUG # optional: set log level. Default WARNING
-  #         # config_file: path/this_file
-  #         # baseline: cloudformation/.checkov.baseline # optional: Path to a generated baseline file. Will only report results not in the baseline.
-  #         # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issues
-
   deploy-azure-infra-terraform:
     name: Deploy to Azure with Terraform
     runs-on: ubuntu-latest
     environment: Development
-  #  needs: [scan-terraform-config]
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -115,30 +90,55 @@ jobs:
       #     az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
 
-  initialize-terraform:
-    name: Terraforn init
-    runs-on: ubuntu-latest
-  #  needs: [deploy-azure-infra-terraform]
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ env.TERRAFORM_DIRECTORY }}
+  # scan-terraform-config:
+  #   runs-on: ubuntu-latest
+  #   name: Scan Terraform with Checov
+  #   steps:
+  #     - name: Checkout repo
+  #       uses: actions/checkout@master
 
-    steps:
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3.1.2
-        with:
-          terraform_version: 1.9.8
+  #     - name: Run Checkov Scan
+  #       id: checkov
+  #       uses: bridgecrewio/checkov-action@master
+  #       with:
+  #         directory: ${{ env.TERRAFORM_DIRECTORY }}
+  #         soft_fail: true # optional: do not return an error code if there are failed checks
+  #         # check: CKV_AWS_1 # optional: run only a specific check_id. can be comma separated list
+  #         # skip_check: CKV_AWS_2 # optional: skip a specific check_id. can be comma separated list
+  #         # quiet: true # optional: display only failed checks
+  #         # framework: terraform # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
+  #         # output_format: sarif # optional: the output format, one of: cli, json, junitxml, github_failed_only, or sarif. Default: sarif
+  #         # download_external_modules: true # optional: download external terraform modules from public git repositories and terraform registry
+  #         # log_level: DEBUG # optional: set log level. Default WARNING
+  #         # config_file: path/this_file
+  #         # baseline: cloudformation/.checkov.baseline # optional: Path to a generated baseline file. Will only report results not in the baseline.
+  #         # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issuesclear
 
-      - name: Terraform Init
-        id: init
-        run: |
-          # Initialize a new or existing Terraform working directory by creating initial files, 
-          # loading any remote state, downloading modules, etc.
 
-          terraform init
+  # initialize-terraform:
+  #   name: Terraforn init
+  #   runs-on: ubuntu-latest
+  # #  needs: [deploy-azure-infra-terraform]
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #       working-directory: ${{ env.TERRAFORM_DIRECTORY }}
+
+  #   steps:
+  #     - name: Install Terraform
+  #       uses: hashicorp/setup-terraform@v3.1.2
+  #       with:
+  #         terraform_version: 1.9.8
+
+  #     - name: Terraform Init
+  #       id: init
+  #       run: |
+  #         # Initialize a new or existing Terraform working directory by creating initial files, 
+  #         # loading any remote state, downloading modules, etc.
+
+  #         terraform init
           
-          # Either use the backend.tf file with the config inside or use the following command line
-          # terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT_NAME" \
-          #                -backend-config="container_name=$CONTAINER_NAME" \
-          #                -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
+  #         # Either use the backend.tf file with the config inside or use the following command line
+  #         # terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT_NAME" \
+  #         #                -backend-config="container_name=$CONTAINER_NAME" \
+  #         #                -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
