Create remote state

--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -76,18 +76,18 @@ jobs:
           STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
           echo $STORAGE_ACCOUNT_CONNECTION_STRING
 
-      # - name: Getting ACR credentials
-      #   run: |
+      - name: Getting ACR credentials
+        run: |
           
-      #     echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ACR_ID }}
-      #     az account set --subscription ${{ secrets.SUBSCRIPTION_ACR_ID }}
+          echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ACR_ID }}
+          az account set --subscription ${{ secrets.SUBSCRIPTION_ACR_ID }}
           
-      #     echo "🎯 Getting container registry data..."
-      #     ACR_PASSWORD=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.passwords[0].value')
-      #     ACR_USERNAME=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.username')
+          echo "🎯 Getting container registry data..."
+          ACR_PASSWORD=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.passwords[0].value')
+          ACR_USERNAME=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.username')
 
-      #     echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
-      #     az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
+          echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
+          az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
 
   # scan-terraform-config:
