--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -41,7 +41,7 @@ jobs:
       #     creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 'Az CLI login'
-        uses: azure/login@a1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0
+        uses: Azure/login@v2.2.0
         with:
           client-id: ${{ secrets.CLIENT_ID }}
           tenant-id: ${{ secrets.TENANT_ID }}
