--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -12,9 +12,9 @@ env:
   PROCESS: planning
   WORKING_DIRECTORY: .github/terraform
 
-permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: read  # This is required for actions/checkout
+#permissions:
+#  id-token: write # This is required for requesting the JWT
+#  contents: read  # This is required for actions/checkout
 
 jobs:
 
