--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -13,9 +13,9 @@ env:
   PROCESS: planning
   TERRAFORM_DIRECTORY: ./terraform
 
-permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: read  # This is required for actions/checkout
+# permissions:
+#   id-token: write # This is required for requesting the JWT
+#   contents: read  # This is required for actions/checkout
 
 jobs:
 
@@ -48,56 +48,56 @@ jobs:
           tenant-id: ${{ secrets.TENANT_ID }}
           subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
    
-      - name: Create Terraform backend state storage
-        run: |
-          echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
-          az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
+      # - name: Create Terraform backend state storage
+      #   run: |
+      #     echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
+      #     az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
-          echo "🎯 Getting resource group named: " ${{ vars.RESOURCE_GROUP_NAME }}
-          RG_EXISTS=$(az group exists --name ${{ vars.RESOURCE_GROUP_NAME }} )
-          if [ $RG_EXISTS == "false" ]; then
-            echo "Resource group not found, creating... "
-            az group create --name ${{ vars.RESOURCE_GROUP_NAME }} --location ${{ vars.LOCATION }}
-          fi
-          RESOURCE_GROUP_ID=$(az group show -n ${{ vars.RESOURCE_GROUP_NAME }}  -o tsv --query id)
+      #     echo "🎯 Getting resource group named: " ${{ vars.RESOURCE_GROUP_NAME }}
+      #     RG_EXISTS=$(az group exists --name ${{ vars.RESOURCE_GROUP_NAME }} )
+      #     if [ $RG_EXISTS == "false" ]; then
+      #       echo "Resource group not found, creating... "
+      #       az group create --name ${{ vars.RESOURCE_GROUP_NAME }} --location ${{ vars.LOCATION }}
+      #     fi
+      #     RESOURCE_GROUP_ID=$(az group show -n ${{ vars.RESOURCE_GROUP_NAME }}  -o tsv --query id)
 
-          echo "🎯 Getting storage account named: " ${{ vars.STORAGE_ACCOUNT_NAME }}
-          STORAGE_ACCOUNT_NOT_FOUND=$(az storage account check-name --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query nameAvailable)
-          if [ $STORAGE_ACCOUNT_NOT_FOUND == "true" ]; then
-              echo ""
-              echo "Storage account not found. Creating..."
-            az storage account create --resource-group ${{ vars.RESOURCE_GROUP_NAME }} --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --sku Standard_LRS --encryption-services blob
-          fi
-          STORAGE_ACCOUNT=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}  -o tsv --query id)
+      #     echo "🎯 Getting storage account named: " ${{ vars.STORAGE_ACCOUNT_NAME }}
+      #     STORAGE_ACCOUNT_NOT_FOUND=$(az storage account check-name --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query nameAvailable)
+      #     if [ $STORAGE_ACCOUNT_NOT_FOUND == "true" ]; then
+      #         echo ""
+      #         echo "Storage account not found. Creating..."
+      #       az storage account create --resource-group ${{ vars.RESOURCE_GROUP_NAME }} --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --sku Standard_LRS --encryption-services blob
+      #     fi
+      #     STORAGE_ACCOUNT=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}  -o tsv --query id)
 
-          echo "🎯 Getting storage account container named: " ${{ vars.CONTAINER_NAME }}
-          STORAGE_COUNTAINER_EXISTS=$(az storage container exists --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query exists)
-          if [ $STORAGE_COUNTAINER_EXISTS == "false" ]; then
-            echo ""
-            echo "Blob container not found. Creating..."
-            az storage container create --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}
-          fi
-          STORAGE_CONTAINER=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}   -o tsv --query primaryEndpoints.blob)${{ vars.CONTAINER_NAME }}
+      #     echo "🎯 Getting storage account container named: " ${{ vars.CONTAINER_NAME }}
+      #     STORAGE_COUNTAINER_EXISTS=$(az storage container exists --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query exists)
+      #     if [ $STORAGE_COUNTAINER_EXISTS == "false" ]; then
+      #       echo ""
+      #       echo "Blob container not found. Creating..."
+      #       az storage container create --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}
+      #     fi
+      #     STORAGE_CONTAINER=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}   -o tsv --query primaryEndpoints.blob)${{ vars.CONTAINER_NAME }}
 
-          echo "🎯 Getting storage account key..."
-          STORAGE_ACCOUNT_KEY=$(az storage account keys list --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --account-name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "[0].value" -o tsv)
+      #     echo "🎯 Getting storage account key..."
+      #     STORAGE_ACCOUNT_KEY=$(az storage account keys list --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --account-name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "[0].value" -o tsv)
 
-          echo "🎯 Getting storage connection string..."
-          STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
-          echo $STORAGE_ACCOUNT_CONNECTION_STRING
+      #     echo "🎯 Getting storage connection string..."
+      #     STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
+      #     echo $STORAGE_ACCOUNT_CONNECTION_STRING
 
-      - name: Getting ACR credentials
-        run: |
+      # - name: Getting ACR credentials
+      #   run: |
           
-          echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ACR_ID }}
-          az account set --subscription ${{ secrets.SUBSCRIPTION_ACR_ID }}
+      #     echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ACR_ID }}
+      #     az account set --subscription ${{ secrets.SUBSCRIPTION_ACR_ID }}
           
-          echo "🎯 Getting container registry data..."
-          ACR_PASSWORD=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.passwords[0].value')
-          ACR_USERNAME=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.username')
+      #     echo "🎯 Getting container registry data..."
+      #     ACR_PASSWORD=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.passwords[0].value')
+      #     ACR_USERNAME=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.username')
 
-          echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
-          az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
+      #     echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
+      #     az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
 
   # scan-terraform-config:
