--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -8,36 +8,14 @@ on:
 # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-
 env:
   PROCESS: planning
   TERRAFORM_DIRECTORY: ./terraform
-
-# permissions:
-#   id-token: write # This is required for requesting the JWT
-#   contents: read  # This is required for actions/checkout
 
 permissions:
   id-token: write
   contents: read
 
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Azure login
-#         uses: azure/login@v2
-#         with:
-#           client-id: ${{ secrets.CLIENT_ID }}
-#           tenant-id: ${{ secrets.TENANT_ID }}
-#           subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
-
-#       - name: Azure CLI script
-#         uses: azure/cli@v2
-#         with:
-#           azcliversion: latest
-#           inlineScript: |
-#             az account show
 jobs:
 
   deploy-azure-infra-terraform:
@@ -52,17 +30,11 @@ jobs:
         working-directory: ./
 
     steps:
-      # # Checkout the repository to the GitHub Actions runner
-      # - name: Checkout
-      #   uses: actions/checkout@v4.2.2
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
 
-      # - name: Login to Azure with Service Principal
-      #   uses: Azure/login@v2.2.0
-      #   with:
-      #     # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Azure login
+      - name: Azure OIDC login
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.CLIENT_ID }}
@@ -75,8 +47,8 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az account show
+    
 
-   
       # - name: Create Terraform backend state storage
       #   run: |
       #     echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
