--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -87,6 +87,7 @@ jobs:
           STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
           echo $STORAGE_ACCOUNT_CONNECTION_STRING
 
+      # Run 'az acr update -n adcpersonahubdev --admin-enabled true' to enable admin first.
       - name: Getting ACR credentials
         run: |
           
@@ -101,29 +102,29 @@ jobs:
           az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
 
-  # scan-terraform-config:
-  #   runs-on: ubuntu-latest
-  #   name: Scan Terraform with Checov
-  #   steps:
-  #     - name: Checkout repo
-  #       uses: actions/checkout@master
+  scan-terraform-config:
+    runs-on: ubuntu-latest
+    name: Scan Terraform with Checov
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@master
 
-  #     - name: Run Checkov Scan
-  #       id: checkov
-  #       uses: bridgecrewio/checkov-action@master
-  #       with:
-  #         directory: ${{ env.TERRAFORM_DIRECTORY }}
-  #         soft_fail: true # optional: do not return an error code if there are failed checks
-  #         # check: CKV_AWS_1 # optional: run only a specific check_id. can be comma separated list
-  #         # skip_check: CKV_AWS_2 # optional: skip a specific check_id. can be comma separated list
-  #         # quiet: true # optional: display only failed checks
-  #         # framework: terraform # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
-  #         # output_format: sarif # optional: the output format, one of: cli, json, junitxml, github_failed_only, or sarif. Default: sarif
-  #         # download_external_modules: true # optional: download external terraform modules from public git repositories and terraform registry
-  #         # log_level: DEBUG # optional: set log level. Default WARNING
-  #         # config_file: path/this_file
-  #         # baseline: cloudformation/.checkov.baseline # optional: Path to a generated baseline file. Will only report results not in the baseline.
-  #         # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issuesclear
+      - name: Run Checkov Scan
+        id: checkov
+        uses: bridgecrewio/checkov-action@master
+        with:
+          directory: ${{ env.TERRAFORM_DIRECTORY }}
+          soft_fail: true # optional: do not return an error code if there are failed checks
+          # check: CKV_AWS_1 # optional: run only a specific check_id. can be comma separated list
+          # skip_check: CKV_AWS_2 # optional: skip a specific check_id. can be comma separated list
+          # quiet: true # optional: display only failed checks
+          # framework: terraform # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
+          # output_format: sarif # optional: the output format, one of: cli, json, junitxml, github_failed_only, or sarif. Default: sarif
+          # download_external_modules: true # optional: download external terraform modules from public git repositories and terraform registry
+          # log_level: DEBUG # optional: set log level. Default WARNING
+          # config_file: path/this_file
+          # baseline: cloudformation/.checkov.baseline # optional: Path to a generated baseline file. Will only report results not in the baseline.
+          # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issuesclear
 
 
   # initialize-terraform:
