--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -27,7 +27,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: .git/terraform
+        working-directory: ./
 
     steps:
       # Checkout the repository to the GitHub Actions runner
