--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   PROCESS: planning
-  TERRAFORM_DIRECTORY: */terraform
+  TERRAFORM_DIRECTORY: ./terraform
 
 permissions:
   id-token: write
@@ -106,6 +106,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Scan Terraform with Checov
     needs: [deploy-azure-infra-terraform]
+
+    defaults:
+      run:
+        working-directory: terraform
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@master
