--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -109,7 +109,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: terraform
+        working-directory: .github/terraform
 
     steps:
       - name: Checkout repo
